updated the background-color to white, position: fixed and changed the z-indexing to always be on top.

--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -2,6 +2,9 @@
 .navbar{
     width: 100%;
     border-bottom: 1px solid $BorderColor;
+    background-color: white;
+    position: fixed;
+    z-index: 5000;
     .max-width{
         display: flex;
         max-width: 1100px;
